--- a/scenes.yaml
+++ b/scenes.yaml
@@ -313,3 +313,51 @@
   metadata:
     light.bathroom_ambient_lights:
       entity_only: true
+- id: '1731186597264'
+  name: Living Room Movie
+  entities:
+    light.living_room_ambient_lights:
+      supported_color_modes:
+      - brightness
+      color_mode: brightness
+      brightness: 1
+      friendly_name: Living Room Ambient Lights
+      supported_features: 0
+      icon: mdi:ceiling-light-multiple
+      state: 'on'
+    light.living_room_sofa_windowsill_light:
+      supported_color_modes:
+      - onoff
+      color_mode:
+      friendly_name: Living Room Sofa Windowsill Light
+      supported_features: 0
+      icon: mdi:desk-lamp
+      state: 'off'
+    light.living_room_desk_windowsill_light:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 5000
+      min_mireds: 200
+      max_mireds: 500
+      supported_color_modes:
+      - color_temp
+      color_mode:
+      brightness:
+      color_temp_kelvin:
+      color_temp:
+      hs_color:
+      rgb_color:
+      xy_color:
+      entity_id:
+      - light.light_1d46_light
+      icon: mdi:desk-lamp
+      friendly_name: Living Room Desk Windowsill Light
+      supported_features: 32
+      state: 'off'
+  icon: mdi:movie-roll
+  metadata:
+    light.living_room_ambient_lights:
+      entity_only: true
+    light.living_room_sofa_windowsill_light:
+      entity_only: true
+    light.living_room_desk_windowsill_light:
+      entity_only: true
