--- a/include/template/kitchen.yaml
+++ b/include/template/kitchen.yaml
@@ -55,3 +55,47 @@
         {% set AH = (es * RH * 2.1674) / (T + 273.15) %}
         {{ AH | round(2) }}
       state_class: "measurement"
+- sensor:
+    - name: "Kitchen Temperature Level"
+      unique_id: kitchen_temperature_level
+      device_class: enum
+      state: >
+        {% set temp = states('sensor.kitchen_temperature') | float %}
+        {% if temp < 17 %}
+          Cold
+        {% elif 17 <= temp < 19 %}
+          Cool
+        {% elif 19 <= temp < 21 %}
+          Mild
+        {% elif 21 <= temp < 23 %}
+          Warm
+        {% elif 23 <= temp < 25 %}
+          Hot
+        {% elif 25 <= temp %}
+          Very Hot
+        {% else %}
+          Unknown
+        {% endif %}
+      icon: >
+        {% set temp = states('sensor.kitchen_temperature') | float %}
+        {% if temp < 17 %}
+          mdi:thermometer-low
+        {% elif 17 <= temp < 19 %}
+          mdi:thermometer-low
+        {% elif 19 <= temp < 21 %}
+          mdi:thermometer
+        {% elif 21 <= temp < 23 %}
+          mdi:thermometer-high
+        {% elif 23 <= temp < 25 %}
+          mdi:thermometer-high
+        {% elif 25 <= temp %}
+          mdi:thermometer-alert
+        {% else %}
+          mdi:thermometer
+        {% endif %}
+      availability: >
+        {% if states('sensor.kitchen_temperature') not in ['unavailable', 'unknown'] %}
+          true
+        {% else %}
+          false
+        {% endif %}
