--- a/include/template/outdoor.yaml
+++ b/include/template/outdoor.yaml
@@ -9,3 +9,6 @@
         {% set AH = (es * RH * 2.1674) / (T + 273.15) %}
         {{ AH | round(2) }}
       state_class: "measurement"
+      availability: >
+        {{ states('sensor.outdoor_temperature') not in ['unavailable', 'unknown', 'none'] and
+            states('sensor.outdoor_relative_humidity') not in ['unavailable', 'unknown', 'none'] }}
