--- a/include/input_number/bedroom.yaml
+++ b/include/input_number/bedroom.yaml
@@ -1,5 +1,12 @@
-bedroom_daylight_illuminance_threshold:
-  name: "Bedroom Daylight Illuminance Threshold"
+bedroom_daylight_illuminance_lower_threshold:
+  name: "Bedroom Daylight Illuminance Lower Threshold"
+  min: 1
+  max: 100
+  step: 1
+  mode: box
+  unit_of_measurement: lx
+bedroom_daylight_illuminance_upper_threshold:
+  name: "Bedroom Daylight Illuminance Upper Threshold"
   min: 1
   max: 100
   step: 1
