--- a/include/input_number/living_room.yaml
+++ b/include/input_number/living_room.yaml
@@ -1,5 +1,12 @@
-living_room_daylight_illuminance_threshold:
-  name: "Living Room Daylight Illuminance Threshold"
+living_room_daylight_illuminance_lower_threshold:
+  name: "Living Room Daylight Illuminance Lower Threshold"
+  min: 1
+  max: 100
+  step: 1
+  mode: box
+  unit_of_measurement: lx
+living_room_daylight_illuminance_upper_threshold:
+  name: "Living Room Daylight Illuminance Upper Threshold"
   min: 1
   max: 100
   step: 1
