--- a/esphome/climate-44a4.yaml
+++ b/esphome/climate-44a4.yaml
@@ -31,16 +31,22 @@ logger:
 # Enable Home Assistant API
 api:
 
-# Allow Over-The-Air updates
-ota:
-- platform: esphome
-
 # Allow provisioning Wi-Fi via serial
 improv_serial:
 
+# Allow Over-The-Air updates
+ota:
+  - platform: esphome
+    password: !secret ota_password
+    id: ota_pass
+
 wifi:
-  # Set up a wifi access point
-  ap: {}
+  networks:
+    - ssid: !secret wifi_ssid
+      password: !secret wifi_password
+    - ssid: !secret wifi_ssid2
+      password: !secret wifi_password
+
 
 # In combination with the `ap` this allows the user
 # to provision wifi credentials to the device via WiFi AP.
@@ -99,6 +105,17 @@ sensor:
       } else {
         return id(internal_temperature).state;
       }
+
+binary_sensor:
+  - platform: template
+    name: "External Temperature Entity Used"
+    lambda: |-
+      if (!isnan(id(external_temperature).state) && (id(external_temperature).has_state())) {
+        return true;
+      } else {
+        return false;
+      }
+    entity_category: diagnostic
 
 status_led:
   pin:
