Added availability template for laptop_docker

--- a/include/binary_sensor/living_room.yaml
+++ b/include/binary_sensor/living_room.yaml
@@ -46,3 +46,5 @@
       device_class: connectivity
       value_template: >-
         {{ is_state('sensor.laptop_5647_docked', 'Docked') }}
+      availability_template: >-
+        {{ states('sensor.laptop_5647_docked') not in ['unknown', 'unavailable', 'None'] }}
