--- a/esphome/fan-6ab8.yaml
+++ b/esphome/fan-6ab8.yaml
@@ -84,7 +84,17 @@ one_wire:
 
 sensor:
   - platform: dallas_temp
-    name: "Temperature"
+    name: Temperature
+    update_interval: 1s
+    accuracy_decimals: 1
+    filters:
+      - sliding_window_moving_average:
+          window_size: 5
+          send_every: 1
+      - round: 1 # will round to 1 decimal place
+      - or:
+        - delta: 0.1 # only send updated value on change >0.1, or
+        - heartbeat: 60s # at least every 60 s
 
 # Buttons for Fan Control
 binary_sensor:
