--- a/esphome/therm-d7f6.yaml
+++ b/esphome/therm-d7f6.yaml
@@ -45,13 +45,29 @@ sensor:
     temperature:
       name: "Temperature"
       unit_of_measurement: "°C"
-      accuracy_decimals: 2
+      accuracy_decimals: 1
+      filters:
+        - sliding_window_moving_average:
+            window_size: 5
+            send_every: 1
+        - round: 1 # will round to 1 decimal place
+        - or:
+          - delta: 0.1 # only send updated value on change >0.1, or
+          - heartbeat: 60s # at least every 60 s      
     humidity:
-      name: "Humidity"
+      name: "Relative Humidity"
       unit_of_measurement: "%"
-      accuracy_decimals: 2
+      accuracy_decimals: 1
+      filters:
+        - sliding_window_moving_average:
+            window_size: 5
+            send_every: 1
+        - round: 1 # will round to 1 decimal place
+        - or:
+          - delta: 0.1 # only send updated value on change >0.1, or
+          - heartbeat: 60s # at least every 60 s
     address: 0x44  # Default I2C address for SHT31
-    update_interval: 15s
+    update_interval: 1s
 
 status_led:
   pin:
