Improve living room occupancy weighted temperature

--- a/include/sensor/living_room.yaml
+++ b/include/sensor/living_room.yaml
@@ -37,21 +37,21 @@
     - sensor.therm_977c_temperature
 
 - platform: history_stats
-  name: Living Room Sofa Occupancy Ratio Last Hour
-  unique_id: living_room_sofa_occupancy_ratio_last_hour
+  name: Living Room Sofa Occupancy Ratio
+  unique_id: living_room_sofa_occupancy_ratio
   entity_id: binary_sensor.living_room_sofa_occupancy
   state: "on"
   type: ratio
   end: "{{ now() }}"
   duration:
-    hours: 1
+    minutes: 15
 
 - platform: history_stats
-  name: Living Room Desk Occupancy Ratio Last Hour
-  unique_id: living_room_desk_occupancy_ratio_last_hour
+  name: Living Room Desk Occupancy Ratio
+  unique_id: living_room_desk_occupancy_ratio
   entity_id: binary_sensor.living_room_desk_occupancy
   state: "on"
   type: ratio
   end: "{{ now() }}"
   duration:
-    hours: 1
+    minutes: 15
