--- a/include/template/light-ec96.yaml
+++ b/include/template/light-ec96.yaml
@@ -1,7 +1,7 @@
 - sensor:
     - unique_id: "light_ec96_last_brightness"
       state: >
-        {% set brightness = state_attr('light.light_ec96_light', 'brightness') %}
+        {% set brightness = state_attr('light.light_ec96', 'brightness') %}
         {% if brightness is not none and brightness | is_number and (brightness | int) > 0 %}
           {{ brightness | int }}
         {% else %}
