--- a/include/binary_sensor/bathroom.yaml
+++ b/include/binary_sensor/bathroom.yaml
@@ -4,6 +4,7 @@
   device_class: occupancy
   entities:
     - binary_sensor.occupancy_715f_occupancy
+    - binary_sensor.occupancy_0200_occupancy
     - binary_sensor.bathroom_doorway_occupancy
 - platform: group
   unique_id: bathroom_doorway_occupancy
