--- a/scenes.yaml
+++ b/scenes.yaml
@@ -286,9 +286,11 @@
       - brightness
       color_mode: brightness
       brightness: 1
+      entity_id:
+      - light.light_ec96_wrapper
+      icon: mdi:ceiling-light-multiple
       friendly_name: Living Room Ambient Lights
       supported_features: 0
-      icon: mdi:ceiling-light-multiple
       state: 'on'
     light.living_room_sofa_windowsill_light:
       supported_color_modes:
@@ -313,7 +315,7 @@
       rgb_color:
       xy_color:
       entity_id:
-      - light.light_1d46_light
+      - light.light_1d46
       icon: mdi:desk-lamp
       friendly_name: Living Room Desk Windowsill Light
       supported_features: 32
@@ -333,7 +335,7 @@
       rgb_color:
       xy_color:
       entity_id:
-      - light.light_2a1e_light
+      - light.light_2a1e
       icon: mdi:desk-lamp
       friendly_name: Living Room Desk Reading Light
       supported_features: 32
@@ -360,10 +362,21 @@
       rgb_color:
       xy_color:
       entity_id:
-      - light.light_0b62_light
+      - light.light_0b62
       icon: mdi:desk-lamp
       friendly_name: Living Room Doorway Windowsill Light
       supported_features: 32
+      state: 'off'
+    light.living_room_sofa_reading_light:
+      supported_color_modes:
+      - brightness
+      color_mode:
+      brightness:
+      entity_id:
+      - light.light_4da4_light
+      icon: mdi:desk-lamp
+      friendly_name: Living Room Sofa Reading Light
+      supported_features: 40
       state: 'off'
   icon: mdi:movie-roll
   metadata:
@@ -378,6 +391,8 @@
     light.living_room_3d_printer_light:
       entity_only: true
     light.living_room_doorway_windowsill_light:
+      entity_only: true
+    light.living_room_sofa_reading_light:
       entity_only: true
 - id: '1734753650798'
   name: Bedroom Night Light
@@ -464,3 +479,7 @@
   metadata:
     light.living_room_sofa_reading_light:
       entity_only: true
+- id: '1735569800753'
+  name: Bathroom Mirror Light Power Default
+  entities: {}
+  metadata: {}
