--- a/include/binary_sensor/bathroom.yaml
+++ b/include/binary_sensor/bathroom.yaml
@@ -6,9 +6,17 @@
     - binary_sensor.occupancy_715f_occupancy
     - binary_sensor.occupancy_0200_occupancy
     - binary_sensor.bathroom_doorway_occupancy
+
 - platform: group
   unique_id: bathroom_doorway_occupancy
   name: "Bathroom Doorway Occupancy"
   device_class: occupancy
   entities:
     - binary_sensor.occupancy_249b_presence_sensor_4
+
+- platform: group
+  unique_id: bathroom_toilet_occupancy
+  name: "Bathroom Toilet Occupancy"
+  device_class: occupancy
+  entities:
+    - binary_sensor.occupancy_e58c_occupancy
