--- a/automations.yaml
+++ b/automations.yaml
@@ -329,15 +329,21 @@
       - light.bathroom_lights
       - light.hallway_lights
       - light.kitchen_lights
+      - light.bedroom_accent_lights
+  - action: switch.turn_off
+    metadata: {}
+    data: {}
+    target:
+      entity_id: switch.bathroom_mirror_light_power
+  - type: toggle
+    device_id: d31e007475f48da84ec9406b72785700
+    entity_id: 5b48a3d54783281449ca0208f1839143
+    domain: switch
   - action: switch.turn_off
     metadata: {}
     data: {}
     target:
       entity_id: switch.bedroom_mosquito_repeller
-  - type: toggle
-    device_id: d31e007475f48da84ec9406b72785700
-    entity_id: 5b48a3d54783281449ca0208f1839143
-    domain: switch
   - action: switch.turn_on
     metadata: {}
     data: {}
@@ -354,11 +360,6 @@
       preset_mode: eco
     target:
       entity_id: climate.climate_44a4_thermostat
-  - action: light.turn_off
-    metadata: {}
-    data: {}
-    target:
-      entity_id: light.bedroom_accent_lights
   mode: restart
 - id: '1719610365051'
   alias: Bedroom Mosquito Repelling Start
