--- a/automations.yaml
+++ b/automations.yaml
@@ -1019,3 +1019,48 @@
         target:
           entity_id: switch.bathroom_mirror_light_power
   mode: single
+- id: '1736699525296'
+  alias: Away
+  description: ''
+  triggers: []
+  conditions: []
+  actions:
+  - action: light.turn_off
+    metadata: {}
+    data: {}
+    target:
+      entity_id:
+      - light.bedroom_reading_light
+      - light.bedroom_ambient_lights
+      - light.living_room_lights
+      - light.bathroom_lights
+      - light.hallway_lights
+      - light.kitchen_lights
+      - light.bedroom_accent_lights
+  - action: switch.turn_off
+    metadata: {}
+    data: {}
+    target:
+      entity_id: switch.bedroom_mosquito_repeller
+  - action: switch.turn_on
+    metadata: {}
+    data: {}
+    target:
+      entity_id: switch.fan_1d90_night_mode
+  - action: media_player.turn_off
+    metadata: {}
+    data: {}
+    target:
+      entity_id: media_player.living_room_tv
+  - action: climate.set_preset_mode
+    metadata: {}
+    data:
+      preset_mode: eco
+    target:
+      entity_id: climate.climate_44a4_thermostat
+  - action: switch.turn_off
+    metadata: {}
+    data: {}
+    target:
+      entity_id: switch.bathroom_mirror_light_power
+  mode: restart
