--- a/include/sensor/bedroom.yaml
+++ b/include/sensor/bedroom.yaml
@@ -6,6 +6,12 @@
     - sensor.fan_1d90_temperature
     - sensor.clock_3006_temperature
 - platform: min_max
+  unique_id: bedroom_bed_temperature
+  name: "Bedroom Bed Temperature"
+  type: mean
+  entity_ids:
+    - sensor.therm_d71e_temperature
+- platform: min_max
   unique_id: bedroom_relative_humidity
   name: "Bedroom Relative Humidity"
   type: mean
